@@ -49,6 +49,7 @@ List of files:
 /LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-017.html
 /LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-018.html
 /LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-019.html
+/LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-020.html
 /LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-script-focus-001.html
 /LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-script-focus-002.tentative.html
 /LayoutTests/imported/w3c/web-platform-tests/css/selectors/focus-visible-script-focus-003.tentative.html
